added token security added integration test with BNC api