@@ -3,11 +3,10 @@ package co.com.bancolombia.mscurrencytest.infrastructure.service;
 import co.com.bancolombia.mscurrencytest.domain.model.entities.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @RequiredArgsConstructor
 public class LoginUserDetails implements UserDetails {
@@ -16,8 +15,10 @@ public class LoginUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority grantedAuthority = new SimpleGrantedAuthority(user.getRole());
-        return List.of(grantedAuthority);
+        //these lines just in case there are roles
+     /*   SimpleGrantedAuthority grantedAuthority = new SimpleGrantedAuthority(user.getRole());
+        return List.of(grantedAuthority);*/
+        return Collections.emptyList();
     }
 
     @Override
